# bindfit

./: .flake8  .pre-commit-config.yaml  NMR1to2.csv  README.md  flake.nix  install_dev_requirements.sh  pyproject.toml  test.py  test_datapackage.py  test_fitter.py  test_helpers.py
bindfit/: __init__.py  datapackage.py  fitter.py  formatter.py  functions.py  helpers.py
tests/nmr1to1/: BMLT125full.csv  daryl1.csv  daryl1_fixed.csv  ethanmg.csv  pep2.csv  pep2_fixed.csv
tests/nmr1to2/: NMR1to2.csv  statnmr1to2.csv
tests/nmr1to3/: nmr1to3.xlsx  simplenmr1to3.csv
tests/uv1to1/: sq5_small.csv  uv1to1_big.csv
tests/uv1to2/: uv1to2test.csv
